--- a/src/app/features/administration/components/tickets/reinsurance-allocations/reinsurance-allocations.component.html
+++ b/src/app/features/administration/components/tickets/reinsurance-allocations/reinsurance-allocations.component.html
@@ -49,6 +49,7 @@
       <div class="tab-content" id="ex1-content">
         <div class="tab-pane fade show active" id="ex1-tabs-1" role="tabpanel" aria-labelledby="ex1-tab-1">
           <label class="text-primary mb-2">Treaty risk ceding</label>
+          <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table
             [autoLayout]="true"
             [rowHover]="true"
@@ -102,6 +103,7 @@
           <div class="mt-5">
             <p-tabView>
               <p-tabPanel header="Treaty RI summary">
+                <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
                 <p-table
                   [autoLayout]="true"
                   [rowHover]="true"
@@ -282,6 +284,7 @@
               ></span>
                 </div>
                 <div>
+                  <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
                   <p-table
                     [autoLayout]="true"
                     [rowHover]="true"
@@ -359,6 +362,7 @@
                 </div>
 
                 <div>
+                  <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
                   <p-table
                     [autoLayout]="true"
                     [rowHover]="true"
@@ -411,6 +415,7 @@
               </p-tabPanel>
               <p-tabPanel header="Reinsurance pool">
                 <div>
+                  <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
                   <p-table
                     [autoLayout]="true"
                     [rowHover]="true"
@@ -482,6 +487,7 @@
                   </div>
                 </div>
                 <div>
+                  <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
                   <p-table
                     [autoLayout]="true"
                     [rowHover]="true"
@@ -529,6 +535,7 @@
                   </p-table>
                 </div>
                 <div>
+                  <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
                   <p-table
                     [autoLayout]="true"
                     [rowHover]="true"
@@ -581,6 +588,7 @@
         </div>
         <div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
           <label class="text-primary mb-2">Previous ceding</label>
+          <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table
             [autoLayout]="true"
             [rowHover]="true"
@@ -626,6 +634,7 @@
           </p-table>
 
           <label class="text-primary mt-5 mb-2">Treaty cessions</label>
+          <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table
             [autoLayout]="true"
             [rowHover]="true"
@@ -665,6 +674,7 @@
           </p-table>
 
           <label class="text-primary mt-5 mb-2">Facre cessions</label>
+          <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table
             [autoLayout]="true"
             [rowHover]="true"
@@ -707,6 +717,7 @@
         </div>
         <div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">
           <label class="text-primary mb-2">Treaty setup</label>
+          <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table
             [autoLayout]="true"
             [rowHover]="true"
@@ -757,6 +768,7 @@
         </div>
         <div class="tab-pane fade" id="ex1-tabs-4" role="tabpanel" aria-labelledby="ex1-tab-4">
           <label class="text-primary mb-2">Policy facre ceding</label>
+          <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table
             [autoLayout]="true"
             [rowHover]="true"
