--- a/src/app/features/administration/components/tickets/ticket-details/ticket-reports/ticket-reports.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/ticket-reports/ticket-reports.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="module != 'C'">
   <label for="format" style="font-weight: 700; font-size: 13px; padding: 0 0.5rem 1rem 0;">{{'Select format:'}}</label>
   <select style="font-weight: 500; font-size: 13px; width: 90px;" id="format" [(ngModel)]="selectedFormat">
     <option value="HTML">HTML</option>
