--- a/src/app/features/crm/components/division/division.component.html
+++ b/src/app/features/crm/components/division/division.component.html
@@ -178,7 +178,7 @@
               </ng-template>
               <ng-template pTemplate="emptymessage">
                 <tr>
-                  <td colspan="8">No division branche's found.</td>
+                  <td colspan="8">No division branch found.</td>
                 </tr>
               </ng-template>
             </p-table>
