--- a/src/app/features/crm/components/organization/organization.component.html
+++ b/src/app/features/crm/components/organization/organization.component.html
@@ -156,7 +156,9 @@
               </div>
             </div>
             <div class="col-sm-4 mb-4">
-              <label for="stateName" class="form-label">State Name</label>
+              <label for="stateName" class="form-label">{{
+                getStateLabel()
+              }}</label>
               <p-dropdown
                 [options]="stateData"
                 [(ngModel)]="selectedState"
