--- a/src/app/features/crm/components/required-documents/required-documents.component.html
+++ b/src/app/features/crm/components/required-documents/required-documents.component.html
@@ -174,7 +174,7 @@
                   </ng-template>
                   <ng-template pTemplate="emptymessage">
                     <tr>
-                      <td colspan="8">No Account found.</td>
+                      <td colspan="8">No Applies To Document found.</td>
                     </tr>
                   </ng-template>
                 </p-table>
