--- a/src/app/features/crm/components/service-provider-types/service-provider-types.component.html
+++ b/src/app/features/crm/components/service-provider-types/service-provider-types.component.html
@@ -105,7 +105,7 @@
     <div class="row">
       <div class="card col-md-12 col-lg-12 col-xxl-12 mb-3">
         <div class="card-header bg-transparent float-start">
-          <span class="float-start mt-3">Service Provider Activities</span>
+          <span class="float-start mt-3">Service Provider Type Activities</span>
         </div>
         <div class="card-body">
           <div class="row mb-3">
@@ -172,7 +172,9 @@
                 </ng-template>
                 <ng-template pTemplate="emptymessage">
                   <tr>
-                    <td colspan="8">No Service Provider Activities found.</td>
+                    <td colspan="8">
+                      No Service Provider Type Activities found.
+                    </td>
                   </tr>
                 </ng-template>
               </p-table>
