--- a/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
+++ b/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
@@ -47,7 +47,8 @@
                                 interface type</label>
                             <select class="form-select form-control-sm mb-1 ms-n4" id="product-input"
                                 formControlName="source">
-                                <option value=""></option>
+                                <option value="ACCRUAL">Accrual</option>
+                                <option value="CASH">Cash</option>
 
                             </select>
                         </div>
