--- a/src/app/features/crm/components/branch/branch.component.html
+++ b/src/app/features/crm/components/branch/branch.component.html
@@ -304,7 +304,7 @@
         </div>
       </div>
     </div>
-    <div class="row mt-1">
+    <!-- <div class="row mt-1">
       <div class="col-12">
         <div class="float-end">
           <button
@@ -315,7 +315,7 @@
           </button>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
