--- a/src/app/features/lms/ind/components/quotation/components/product/product.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/product/product.component.html
@@ -177,7 +177,7 @@
                       height: '37px',
                       'line-height': '10px'
                     }"
-                    placeholder="Select or Type Client name"
+                    placeholder="Select or Type Agent name"
                     (onChange)="selectClient($event)"
                     formControlName="agent"
                     class="select"
