--- a/src/app/shared/components/quotation-landing-screen/quotation-landing-screen.component.html
+++ b/src/app/shared/components/quotation-landing-screen/quotation-landing-screen.component.html
@@ -49,6 +49,8 @@
               <div class="d-flex justify-content-end">
                 <button style="padding: 0.5em; font-size: 12px !important" type="button" class="btn btn-sm btn-primary" [routerLink]="'/home/lms/ind/quotation/quick'">Quick Quotation</button>
                 <button style="padding: 0.5em; font-size: 12px !important" type="button" class="btn btn-sm btn-primary" (click)="selectNormalQuotation()"> Normal Quotation </button>
+                <button style="padding: 0.5em; font-size: 12px !important" type="button" class="btn btn-sm btn-primary" (click)="selectNormalQuotation()"> Proposal </button>
+
               </div>
             </div>
           </div>
