--- a/src/app/features/crm/components/client-type/client-type.component.html
+++ b/src/app/features/crm/components/client-type/client-type.component.html
@@ -53,7 +53,7 @@
                 [scrollable]="true"
                 scrollHeight="400px"
                 class="ui-datatable"
-                [globalFilterFields]="['channelName', 'channelDesc']"
+                [globalFilterFields]="['clientTypeName']"
               >
                 <ng-template pTemplate="header">
                   <tr>
