--- a/src/app/features/crm/components/required-documents/required-documents.component.html
+++ b/src/app/features/crm/components/required-documents/required-documents.component.html
@@ -96,7 +96,7 @@
                 <input
                   type="text"
                   class="form-control"
-                  placeholder="Search by account or type"
+                  placeholder="Search by account"
                   aria-label="search"
                   aria-describedby="search"
                   (input)="filterAssignDocuments($event)"
