--- a/src/app/features/crm/components/sector-occupation/sector-occupation.component.html
+++ b/src/app/features/crm/components/sector-occupation/sector-occupation.component.html
@@ -95,7 +95,7 @@
                 <input
                   type="text"
                   class="form-control"
-                  placeholder="Search by account or type"
+                  placeholder="Search by name"
                   aria-label="search"
                   aria-describedby="search"
                   (input)="filterOccupations($event)"
