--- a/src/app/features/crm/components/user-parameters/user-parameters.component.html
+++ b/src/app/features/crm/components/user-parameters/user-parameters.component.html
@@ -14,7 +14,7 @@
             <input
               type="text"
               class="form-control"
-              placeholder="Search by name or description"
+              placeholder="Search by name"
               aria-label="search"
               aria-describedby="search"
               (input)="filterParameters($event)"
@@ -25,58 +25,11 @@
               <span class="icon-circle"
                 ><i class="pi pi-pencil" (click)="editParameter()"></i
               ></span>
-              <!-- <span class="icon-circle"><i class="fa-regular fa-trash-can" (click)="deleteParameter()"></i></span> -->
             </div>
           </div>
         </div>
         <div class="row mb-5">
           <div class="col-12">
-            <!-- <p-table
-              #parameterTable
-              [value]="userParametersData"
-              [autoLayout]="true"
-              [rowHover]="true"
-              responsiveLayout="scroll"
-              styleClass="p-datatable-sm"
-              [scrollable]="true"
-              scrollHeight="400px"
-              class="ui-datatable"
-              [globalFilterFields]="['name']"
-            >
-              <ng-template pTemplate="header">
-                <tr>
-                  <th class="head">Name</th>
-                  <th class="head">Value</th>
-                  <th class="head">Description</th>
-                  <th class="head">Status</th>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="body" let-param>
-                <tr
-                  class="custom-table"
-                  (click)="onParamsRowClick(param)"
-                  [class.selected]="selectedParameter === param"
-                >
-                  <td class="body">{{ param.name }}</td>
-                  <td class="body" (click)="openModal('Value', param.value)">
-                    {{ sliceString(param.value) }}
-                  </td>
-                  <td
-                    class="body"
-                    (click)="openModal('Description', param.description)"
-                  >
-                    {{ sliceString(param.description) }}
-                  </td>
-                  <td class="body">{{ param.status }}</td>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="emptymessage">
-                <tr>
-                  <td colspan="8">No user parameters found.</td>
-                </tr>
-              </ng-template>
-            </p-table> -->
-
             <p-table
               #parameterTable
               [value]="userParametersData"
@@ -275,15 +228,3 @@
     </div>
   </div>
 </div>
-
-<!-- dialog modal for additional information on the table column -->
-<p-dialog
-  header="{{ modalColumnName }}"
-  [(visible)]="isModalOpen"
-  [modal]="true"
-  [responsive]="true"
->
-  <div>
-    <p>{{ modalColumnValue }}</p>
-  </div>
-</p-dialog>
